[docs update]完善jvm部分描述+统一手绘图片样式